test: tests for ChatroomRepository and MessageRepository